Closed
Bug 268171
Opened 21 years ago
Closed 20 years ago
typeahead find handles but doesn't consume the keypress
Categories
(SeaMonkey :: Find In Page, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: chpe, Assigned: chpe)
Details
Attachments
(2 files)
|
1.08 KB,
patch
|
aaronlev
:
review+
|
Details | Diff | Splinter Review |
|
1.06 KB,
patch
|
chpe
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.2) Gecko/20040803 Galeon/1.3.17.99
Build Identifier:
nsTypeAheadFind::KeyPress calls StopPropagation() but not PreventDefault() on
the DOM event. This omission causes nsWindow::OnKeyPressEvent() to return FALSE,
marking the key event as not consumed to gtk+. In turn, this makes other
handlers try to handle the event.
Reproducible: Always
Steps to Reproduce:
0. Start Epiphany (or any other gtk+ 2.x embedding client which has a window
with a menubar activatable with Alt+Letter), using gtk+ CVS HEAD from 2004-11-06.
1. Load a page
2. Type "/F" (without quotes)
Actual Results:
File menu opens.
Expected Results:
The first "F" in the page is highlighted, and menu not opened.
The gtk+ change which exposed this bug is
http://bugzilla.gnome.org/show_bug.cgi?id=53709 .
| Assignee | ||
Comment 1•21 years ago
|
||
Attachment #164949 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #164949 -
Flags: review?(aaronleventhal)
Comment 2•21 years ago
|
||
I see the code for escape and backspace the code uses PreventDefault but not
StopPropagation. I would have thought the same applies here, but it was
explicitly changed for bug 168281. CCing Kyle in case he knows why.
Comment 3•21 years ago
|
||
Comment on attachment 164949 [details] [diff] [review]
proposed fix
Neil, I just thought that StopPropagation() made PreventDefault() unnecessary.
Guess I was wrong.
Attachment #164949 -
Flags: review?(aaronleventhal) → review+
Comment 4•21 years ago
|
||
No, they mean two completely different things... stopPropagation just means that
no further event listeners in the current event group (normal or system) will be
called. However frame event handlers and xbl keys have separate processing and
preventDefault is the only option to inhibit that processing.
If it works, I'd like to see preventDefault without stopPropagation.
| Assignee | ||
Comment 5•21 years ago
|
||
Using only PreventDefault() without StopPropagation() appears to work fine too,
from a quick test in mozilla-browser and epiphany.
Updated•21 years ago
|
Attachment #165635 -
Flags: superreview+
| Assignee | ||
Updated•21 years ago
|
Attachment #164949 -
Flags: superreview?(neil.parkwaycc.co.uk)
| Assignee | ||
Comment 6•21 years ago
|
||
Comment on attachment 165635 [details] [diff] [review]
PreventDefault without StopPropagation
Transferring r=aaronleventhal, I hope that's ok...
I don't have cvs access, can someone else please check this in ?
Attachment #165635 -
Flags: review+
Comment 7•20 years ago
|
||
This is an automated message, with ID "auto-resolve01".
This bug has had no comments for a long time. Statistically, we have found that
bug reports that have not been confirmed by a second user after three months are
highly unlikely to be the source of a fix to the code.
While your input is very important to us, our resources are limited and so we
are asking for your help in focussing our efforts. If you can still reproduce
this problem in the latest version of the product (see below for how to obtain a
copy) or, for feature requests, if it's not present in the latest version and
you still believe we should implement it, please visit the URL of this bug
(given at the top of this mail) and add a comment to that effect, giving more
reproduction information if you have it.
If it is not a problem any longer, you need take no action. If this bug is not
changed in any way in the next two weeks, it will be automatically resolved.
Thank you for your help in this matter.
The latest beta releases can be obtained from:
Firefox: http://www.mozilla.org/projects/firefox/
Thunderbird: http://www.mozilla.org/products/thunderbird/releases/1.5beta1.html
Seamonkey: http://www.mozilla.org/projects/seamonkey/
Updated•20 years ago
|
Assignee: aaronleventhal → chpe
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 8•20 years ago
|
||
Checking in extensions/typeaheadfind/src/nsTypeAheadFind.cpp;
/cvsroot/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp,v <--
nsTypeAheadFind.cpp
new revision: 1.110; previous revision: 1.109
done
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•