bug 268171 make typeaheadfind use preventDefault instead of stopPropagation so that other handlers don't try to consume the key patch by Christian Persch <chpe@gnome.org> r=aaronlev sr=neil